# Dendr

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  =0.21  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  dendr-models.yaml  docker-compose.yaml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: pr-checks.yml  security-scan.yml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dendr.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
scripts/: update.sh
src/dendr/: __init__.py  __main__.py  autostart.py  canonicalize.py  cli.py  config.py  db.py  digest.py  enrichment.py  fsutil.py  lint.py  llm.py  metrics.py  migrate_logseq.py  model_manager.py  models.py  parser.py  pipeline.py  privacy.py  queue.py  search.py  watcher.py  wiki.py
src/dendr/templates/: __init__.py  claude_digest.md  claude_qa.md  claude_schema_review.md  schema.md  synthesis_prompt.md
tests/: test_autostart.py  test_cli.py  test_db.py  test_digest.py  test_fsutil.py  test_llm.py  test_model_manager.py  test_parser.py  test_pipeline.py  test_privacy.py
